# olj

./: .dockerignore  .gitignore  Dockerfile  README.md  ingest.py  pyproject.toml  run_alerts.py  validate_ingestion.py
.dlt/: secrets.toml.example
olj_scraper/: __init__.py  alerts.py  config.py  ingestion.py  logging_utils.py  parsing.py  pipeline.py  telegram.py  validation.py
