[project]
name = "online_jobs_ph_ingestion"
version = "0.1.0"
description = "Incremental OnlineJobs.ph job listing ingestion into Supabase Postgres via dlt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dlt[postgres]>=1.26.0",
    "lxml>=6.1.0",
    "requests>=2.33.1",
]
